--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,7 +7,8 @@
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="dedication" epub:type="dedication">
-			<p>To Joseph Thompson Shaw</p>
+			<p>To<br/>
+			Joseph Thompson Shaw</p>
 		</section>
 	</body>
 </html>
