--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,93 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/dedication.xhtml">Dedication</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">Red Harvest</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: A Woman in Green and a Man in Gray</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: The Czar of Poisonville</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: Dinah Brand</a>
+						</li>
+						<li>
+							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: Hurricane Street</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Old Elihu Talks Sense</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Whisper’s Joint</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: That’s Why I Sewed You Up</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: A Tip on Kid Cooper</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: A Black Knife</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Crime Wanted—Male or Female</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: The Swell Spoon</a>
+						</li>
+						<li>
+							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: A New Deal</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: —$200.10—</a>
+						</li>
+						<li>
+							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Max</a>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: Cedar Hill Inn</a>
+						</li>
+						<li>
+							<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Exit Jerry</a>
+						</li>
+						<li>
+							<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: Reno</a>
+						</li>
+						<li>
+							<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Painter Street</a>
+						</li>
+						<li>
+							<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: The Peace Conference</a>
+						</li>
+						<li>
+							<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Laudanum</a>
+						</li>
+						<li>
+							<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Seventeenth Murder</a>
+						</li>
+						<li>
+							<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: The Ice Pick</a>
+						</li>
+						<li>
+							<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: <abbr epub:type="z3998:name-title">Mr.</abbr> Charles Proctor Dawn</a>
+						</li>
+						<li>
+							<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: Wanted</a>
+						</li>
+						<li>
+							<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Whiskeytown</a>
+						</li>
+						<li>
+							<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: Blackmail</a>
+						</li>
+						<li>
+							<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Warehouses</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,7 +114,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">Red Harvest</a>
 				</li>
 			</ol>
 		</nav>
