--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			and is based on a transcription produced in 2017 by<br/>
 			<b epub:type="z3998:personal-name">Al Haines</b>, <b epub:type="z3998:personal-name">Cindy Beyer</b>, and <a href="https://www.pgdpcanada.net">The Online Distributed Proofreaders Canada Team</a><br/>
 			for<br/>
-			<a href="PG_URL">Project Gutenberg</a><br/>
+			<a href="https://www.fadedpage.com/showbook.php?pid=20170231">Faded Page</a><br/>
 			and on digital scans from the<br/>
 			<a href="https://archive.org/details/redharvest00hamm/">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
